k8s/clothes-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-clothes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping-clothes
  template:
    metadata:
      labels:
        app: shopping-clothes
    spec:
      containers:
      - name: shopping-clothes
        image: 530438453112.dkr.ecr.eu-west-2.amazonaws.com/clothes:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: shopping-clothes-service
spec:
  type: ClusterIP
  selector:
    app: shopping-clothes
  ports:
  - port: 80
    targetPort: 80
